test/typeerrors/Examples/PatListElem.hs
module PatListElem where

f ["vis" , 49] = "dierentuin"
